[Payments] Be more lenient when matching expiration month in dropdowns

Would previously not catch when the month name was contained in the string
along with other stuff (e.g. "01 - January"). The code will now recognize
this as the month name.

Bug: 767942
Test: components_unittests
Change-Id: Iff5b5f531337ede4372361dccb2565363f5e6f31
Reviewed-on: https://chromium-review.googlesource.com/687114
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504684}
Former-commit-id: d6d004a8e47e62db5073a67a2a7c1348cc3e5846